--- a/relational-algebra-haskell.cabal
+++ b/relational-algebra-haskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 5970e8c3589c9240aa285675a1970fa51f22ffa4ce0b1fe53479cab351d8e8ae
+-- hash: 96e29edc6ad197798942f9f7a1fc310a73d0266701c2b12075b597a1aab2613e
 
 name:           relational-algebra-haskell
 version:        0.1.0.0
@@ -19,7 +19,7 @@ license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
-    ChangeLog.md
+    CHANGELOG.md
 
 source-repository head
   type: git
@@ -35,19 +35,20 @@ library
       Paths_relational_algebra_haskell
   hs-source-dirs:
       src
+  ghc-options: -Wall
   build-depends:
       base >=4.7 && <5
     , pretty
   default-language: Haskell2010
 
-test-suite relational-algebra-haskell-test
+test-suite tests
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: Main.hs
   other-modules:
       Paths_relational_algebra_haskell
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall
   build-depends:
       base >=4.7 && <5
     , doctest >=0.8
